test commit for netlify update

--- a/public/styles.css
+++ b/public/styles.css
@@ -90,3 +90,7 @@ main {
   /* setjum margin neðst, annars endar efni skyndilega */
   margin-bottom: var(--gutter);
 }
+
+.wrapper p {
+  color: hotpink;
+}
